Fix text overflow in posts

--- a/components/feed/FeedPost/styles.module.scss
+++ b/components/feed/FeedPost/styles.module.scss
@@ -91,4 +91,5 @@
 .tag_span {
   font-family: $standard_font;
   color: $text_black;
+  overflow-wrap: break-word;
 }
